--- a/tinker/events/templates/events-home.html
+++ b/tinker/events/templates/events-home.html
@@ -121,7 +121,7 @@
                 <br/>
 
                 <!-- Button trigger modal -->
-                <button class="btn btn-primary btn-raised" data-toggle="modal" data-target="#myModal">
+                <button class="btn btn-primary btn-alert" data-toggle="modal" data-target="#myModal">
                     Delete Event
                 </button>
                 <!-- Modal Core -->
