--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -6,6 +6,11 @@
     margin-left: 0px;
 }
 
+h3 {
+    font-size: 20px;
+    margin: 0px 0px 0px 15px;
+}
+
 @media (min-width:992px) {
     .col-md-1,
     .col-md-10,
