Minor formatting changes across modules

--- a/tinker/admin/publish/templates/publish-home.html
+++ b/tinker/admin/publish/templates/publish-home.html
@@ -12,7 +12,7 @@
 {% block main_content %}
     <div class="content">
         <div class="container-fluid">
-            <h3>Automated publishers</h3>
+            <h3 class="row subtitle">Automated publishers</h3>
             <hr/>
             <div class="row">
                 {#                    <div class="publish-head">#}
