--- a/tinker/admin/sync/templates/sync-home.html
+++ b/tinker/admin/sync/templates/sync-home.html
@@ -6,6 +6,7 @@
 
 {% block main_content %}
     <div class="content">
+        <div class="container"></div>
         <script>
             function postToURLWithSpinner(url, value) {
                 {# activate waiting gif #}
