--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -8,7 +8,10 @@
 
 h3 {
     font-size: 20px;
-    margin: 0px 0px 0px 15px;
+}
+
+.subtitle {
+    margin-top: 0px;
 }
 
 @media (min-width:992px) {
