--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -8,7 +8,7 @@
 {% block main_content %}
     <div class="content">
         <div class="container-fluid">
-            <div class="col-md-6 navbar-left">
+            <div class="col-md-12">
                 <div class="card">
                     <div class="header">
                         <h4 class="title">Manage Events</h4>
@@ -20,7 +20,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 navbar-left">
+            <div class="col-md-12">
                 <div class="card">
                     <div class="header">
                         <h4 class="title">Faculty Bios</h4>
@@ -32,7 +32,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 navbar-left">
+            <div class="col-md-12">
                 <div class="card">
                     <div class="header">
                         <h4 class="title">Manage E-Announcements</h4>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 navbar-left">
+            <div class="col-md-12">
                 <div class="card">
                     <div class="header">
                         <h4 class="title">Manage Redirects</h4>
