--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -1,4 +1,4 @@
-.publish-head{
+.publish-head {
     margin-left: 10px;
 }
 
@@ -14,7 +14,7 @@ h3 {
     margin-top: 0px;
 }
 
-@media (min-width:992px) {
+@media (min-width: 992px) {
     .col-md-1,
     .col-md-10,
     .col-md-11,
@@ -45,8 +45,28 @@ p#faculty-p {
     overflow-wrap: break-word;
 }
 
+ul.dropdown-menu {
+    float: left !important;
+    background-color: #FFFCF5 !important;
+    top: 100%;
+    width: 100% !important;
+    border-radius: 6px;
+    margin-top: 8px;
+    box-shadow: 0 2px rgba(17, 16, 15, 0.1), 0 2px 10px rgba(17, 16, 15, 0.1) !important;
+}
+
+.dropdown-menu > li > a:hover {
+    color: #FFFFFF !important;
+    background-color: #66615B !important;
+}
+
 .btn {
     margin-left: 0px !important;
+    font-weight: 300 !important;
+}
+
+a.btn {
+    font-weight: 600 !important;
 }
 
 .navbar {
@@ -97,9 +117,9 @@ ul.btn-group-horizontal li {
 }
 
 label {
-    margin-bottom: 5px!important;
+    margin-bottom: 5px !important;
     width: 100%;
-    font-family: georgia,serif;
+    font-family: georgia, serif;
 }
 
 input#author {
@@ -112,13 +132,17 @@ input {
 }
 
 select {
-    width: 50%;
+    width: 35%;
     margin-bottom: 15px;
+}
+
+select#school-selector {
+    width: 100%;
 }
 
 .radio label {
     padding: 0px;
-    margin-bottom: -5px!important;
+    margin-bottom: -5px !important;
 }
 
 small.required {
@@ -191,6 +215,6 @@ div#cke_hobbies {
 
 @media (max-width: 350px) {
     select#school-selector {
-        max-width: 90%;
+        max-width: 100%;
     }
 }
