Fixed Publishing Manager unit tests

--- a/tinker/admin/publish/templates/publish-home.html
+++ b/tinker/admin/publish/templates/publish-home.html
@@ -21,6 +21,7 @@
 </div>
 
 <form action="." id="publish-search-form">
+    {{ form.csrf_token }}
     <div class="row">
 
     <div class="large-6 columns">
