--- a/tinker/admin/redirects/templates/redirects.html
+++ b/tinker/admin/redirects/templates/redirects.html
@@ -10,61 +10,58 @@
     <div class="content">
         <div class="container-fluid">
             <div class="row card">
-                {#                <div class="content">#}
-                <form action="" id="new-redirect-form">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <div class="form-group">
-                                From Path:
-                                <input type="text" value="" class="form-control publish-search"/>
+                <div class="content">
+                    <form action="" id="new-redirect-form">
+                        <div class="row job">
+                            <div class="col-sm-4">
+                                <div class="form-group">
+                                    From Path:
+                                    <input type="text" value="" class="form-control no-margin-bottom"/>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="form-group">
+                                    To URL:
+                                    <input type="text" value="" class="form-control no-margin-bottom"/>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="form-group">
+                                    Expiration Date:
+                                    <input type="text" value="" class="form-control no-margin-bottom"/>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-sm-4">
-                            <div class="form-group">
-                                To URL:
-                                <input type="text" value="" class="form-control publish-search"/>
+                        <div class="content job">
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" name="optionsCheckboxes">
+                                    Short URL
+                                </label>
                             </div>
                         </div>
-                        <div class="col-sm-4">
-                            <div class="form-group">
-                                Expiration Date:
-                                <input type="text" value="" class="form-control publish-search"/>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="content">
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" name="optionsCheckboxes">
-                                Short URL
-                            </label>
-                        </div>
-                    </div>
-                    {#                        </div>#}
-                    <div class="row">
                         <div class="btn btn-primary">Save</div>
-                    </div>
-                </form>
-                </br>
-
-                <div class="row">
-                    <div class="large-12 columns">
-                        <table>
-                            <thead>
-                            <tr>
-                                <th width="400">From Path</th>
-                                <th width="400">To URL</th>
-                                <th width="400">Expiration Date</th>
-                            </tr>
-                            </thead>
-                            <tbody id="redirects-table">
-                            </tbody>
-                        </table>
-                    </div>
+                    </form>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <table>
+                        <thead>
+                        <tr>
+                            <th width="400">From Path</th>
+                            <th width="400">To URL</th>
+                            <th width="400">Expiration Date</th>
+                        </tr>
+                        </thead>
+                        <tbody id="redirects-table">
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
         </div>
-    </div>
     </div>
 
 
